--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="theme.css" />
   <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Quicksand&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <title>InMotion - An Insight into Your Emotions</title>
   
   <link rel="stylesheet" href="css/style.css" />
@@ -38,7 +39,7 @@
     An Insight into your emotion
   </h2>
 
-  <div class="d-flex justify-content-center" id="loading">
+  <div class="d-flex justify-content-center pics" id="loading">
 
   </div>
 
