--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
 </nav>
 
 <body>
-  <h1 class="centeredTop" style=" font-family: 'Quicksand', sans-serif; font-weight: 600; font-size: 4em; ">
-    <span style="color:cornflowerblue">I</span>n<span style="color:cornflowerblue">M</span>otion
-  </h1>
+  <div>
+    <h1 class="centeredTop" style=" font-family: 'Quicksand', sans-serif; font-weight: 600; font-size: 4em;">
+      <span style="color:cornflowerblue">I</span>n<span style="color:cornflowerblue">M</span>otion
+    </h1>
 
-  <h2 class="centered"
-    style=" text-align: center;   color: black; font-family: 'Quicksand', sans-serif; font-size: 1.5em; font-weight: 600; ">
-    Select your protagonist!
-  </h2>
-  <!-- <div class="card-group centeredBot">
+    <h2 class="centered"
+      style=" text-align: center;   color: black; font-family: 'Quicksand', sans-serif; font-size: 1.5em; font-weight: 600; ">
+      Select your protagonist!
+    </h2>
+    <!-- <div class="card-group centeredBot">
 			<div class="card">
 				<img class="card-img-top" src="img/kevin.jpg" alt="Card image cap" />
 				<div class="card-body">
@@ -68,30 +69,31 @@
 			</div>
 		</div> -->
 
-  <div class="d-flex justify-content-center pics" style="position:absolute;z-index:1;" id="loading"></div>
+    <div class="d-flex justify-content-center pics" style="position:absolute;z-index:1;" id="loading"></div>
 
-  <div>
     <div>
-      <input class="centeredBot btn btn-secondary btn-lg" type="file" id="imageUpload" />
-      <div id="imageShow" style="width:50%; height:50%"></div>
+      <div>
+        <input class="centeredBot btn btn-secondary btn-lg" type="file" id="imageUpload" />
+        <div id="imageShow" style="width:50%; height:50%"></div>
+      </div>
+
+      <a href="video.html"><button style="position: fixed;top:80%; left:46%;" type="button"
+          class="btn btn-success btn-lg">
+          Demo <i class="fa fa-chevron-circle-right hvr-icon"></i></button></a>
     </div>
 
-    <a href="video.html"><button style="position: fixed;top:80%; left:46%;" type="button"
-        class="btn btn-success btn-lg">
-        Demo <i class="fa fa-chevron-circle-right hvr-icon"></i></button></a>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script defer src="face-api.min.js"></script>
+    <script defer type="module" src="./scriptHomepage.js"></script>
   </div>
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script defer src="face-api.min.js"></script>
-  <script defer type="module" src="./scriptHomepage.js"></script>
 </body>
 
 </html>
