--- a/video.html
+++ b/video.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Quicksand&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css" />
   <title>InMotion</title>
   <script src="https://kit.fontawesome.com/2492c9ba58.js" crossorigin="anonymous"></script>
   <script defer src="node_modules/face-api.js/dist/face-api.min.js"></script>
@@ -31,8 +32,12 @@
 
 <body>
   <div align="center">
-    <button id="cam">Web Cam</button>
-    <input type='file' id="videoUpload">
+    <button id="cam" class="btn btn-success btn-lg">Web Cam</button>
+    <!-- <input type='file' class="custom-file-input" id="videoUpload"> -->
+    <div class="custom-file">
+      <input type="file" class="custom-file-input" id="videoUpload" style="width: 10%">
+      <label class="custom-file-label" for="videoUpload">Choose file</label>
+    </div>
   </div>
   <div class="align-items-center justify-content-center">
     <div class="container col">
